# rocm-cmake

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml  cmake-format.yaml
.azuredevops/: rocm-ci.yml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: issue_report.yml
.github/workflows/: lint.yml  test.yml
doc/: requirements.txt
doc/html/: .buildinfo  ROCMAnalyzers.html  ROCMCheckTargetIds.html  ROCMClangTidy.html  ROCMClients.html  ROCMCppCheck.html  ROCMCreatePackage.html  ROCMDocs.html  ROCMDoxygenDoc.html  ROCMHeaderWrapper.html  ROCMInstallSymlinks.html  ROCMInstallTargets.html  ROCMPackageConfigHelpers.html  ROCMSetupVersion.html  ROCMSphinxDoc.html  ROCMTest.html  ROCMUtilities.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/html/_sources/: ROCMCppCheck.rst.txt
doc/src/: ROCMAnalyzers.rst  ROCMCheckTargetIds.rst  ROCMClangTidy.rst  ROCMClients.rst  ROCMCreatePackage.rst  ROCMDocs.rst  ROCMHeaderWrapper.rst  ROCMInstallSymlinks.rst  ROCMInstallTargets.rst  ROCMLocalTargets.rst  ROCMPackageConfigHelpers.rst  ROCMSetupVersion.rst  ROCMSphinxDoc.rst  ROCMTest.rst  ROCMUtilities.rst  ROCMWrapper.rst  conf.py  index.rst
docs/: CMakeLists.txt  _toc.yml.in  conf.py  requirements.in  requirements.txt
docs/.sphinx/: _toc.yml.in
docs/reference/: ROCMUtilities.rst  license.rst
docs/sphinx/: _toc.yml.in  requirements.txt
docs/src/: ROCMClients.rst  ROCMHeaderWrapper.rst  ROCMSphinxDoc.rst  _toc.yml  _toc.yml.in  conf.py  contents.rst  index.rst  what-is-rocm_cmake.rst
docs/src/reference/: ROCMAnalyzers.rst  ROCMCheckTargetIds.rst  ROCMClangTidy.rst  ROCMClients.rst  ROCMCppCheck.rst  ROCMCreatePackage.rst  ROCMDocs.rst  ROCMDoxygenDoc.rst  ROCMHeaderWrapper.rst  ROCMInstallSymlinks.rst  ROCMInstallTargets.rst  ROCMPackageConfigHelpers.rst  ROCMSetupVersion.rst  ROCMSphinxDoc.rst  ROCMTest.rst  ROCMUtilities.rst
share/rocm/cmake/: ROCMAnalyzers.cmake  ROCMArchitecture.cmake  ROCMCheckTargetIds.cmake  ROCMChecks.cmake  ROCMClangTidy.cmake  ROCMClients.cmake  ROCMConfig.cmake  ROCMConfigVersion.cmake  ROCMCppCheck.cmake  ROCMCreatePackage.cmake  ROCMDocs.cmake  ROCMDoxygenDoc.cmake  ROCMGetVersion.cmake  ROCMHeaderWrapper.cmake  ROCMInstallSymlinks.cmake  ROCMInstallTargets.cmake  ROCMLocalTargets.cmake  ROCMPackageConfigHelpers.cmake  ROCMPolicy.cmake  ROCMProperty.cmake  ROCMSetupVersion.cmake  ROCMSphinxDoc.cmake  ROCMTest.cmake  ROCMUtilities.cmake  ROCMVersionDLL.cmake  ROCMWrapper.cmake  cpack_project_config.cmake  header_template.h.in  version.rc.in
share/rocmcmakebuildtools/cmake/: ROCMArchitecture.cmake  ROCMChecks.cmake  ROCMClangTidy.cmake  ROCMCppCheck.cmake  ROCMCreatePackage.cmake  ROCMDocs.cmake  ROCMFetchContent.cmake  ROCMHeaderWrapper.cmake  ROCMInstallTargets.cmake  ROCMSphinxDoc.cmake  ROCMTest.cmake  ROCMUtilities.cmake  header_template.h.in
test/: CMakeLists.txt  test.cmake
test/analyze/: CMakeLists.txt  simple2.cpp.in
test/docsphinx/: CMakeLists.txt
test/docsphinx/docs/: .gitignore  conf.py  index.rst  reference.rst
test/docsphinx/docs/.doxygen/: Doxyfile  mainpage.dox
test/docsphinx/docs/.sphinx/: _toc.yml.in  requirements.in  requirements.txt
test/docsphinx/include/useful/: useful.hpp
test/docsphinx/src/: useful.cpp
test/fail/: basic-shared.cmake  rocm-find-program-version.cmake  simple-component-export.cmake  toolchain-var.cmake  wrapper-error.cmake  wrapper.cmake
test/findpackagecheck/: CMakeLists.txt
test/libbasic/: CMakeLists.txt  main.cpp
test/libbasic/include/: basic.h
test/libheaderonly/: CMakeLists.txt
test/libheaderonly/include/: headeronly.h
test/libprivate/: CMakeLists.txt  importtarget.cmake  main.cpp  simpleprivate.cpp
test/libprivate/include/: simpleprivate.h
test/libsimple/: CMakeLists.txt  check-package.cmake  importtarget.cmake  simple.cpp
test/libsimple2/: CMakeLists.txt  simple2.cpp
test/libsimple2/include/: simple2.h
test/libsimple3/: CMakeLists.txt
test/libsimplecompat/: CMakeLists.txt  LICENSE
test/libsimplecompat/include/: simple.h
test/libsimpletest/: CMakeLists.txt  test.cpp
test/libsimpletest/test/: CMakeLists.txt
test/libsimplez/: CMakeLists.txt  main.cpp
test/libwrapper/: CMakeLists.txt  importtarget.cmake  use_original.cpp  use_wrapper.cpp  wrapper.cpp
test/libwrapper/include/other/: other.h
test/libwrapper/include/other/th/: two-letter-dir.h
test/libwrapper/include/wrapper/: wrapper.h
test/pass/: analyze-gh.cmake  analyze.cmake  basic-shared.cmake  basic-static.cmake  doc-sphinxdoxygen.cmake  headeronly.cmake  libprivate.cmake  pkg-config-dependency-static.cmake  pkg-config-dependency.cmake  rename-compatibility.cmake  rocm-find-program-version.cmake  rocm-join-if-set.cmake  rocm-list-split.cmake  rocm-package-add-dependencies.cmake  rocm-package-setup-component.cmake  simple-build-id.cmake  simple-component-export.cmake  simple-dllversion-env.cmake  simple-dllversion-infer.cmake  simple-dllversion-property.cmake  simple-dllversion.cmake  simple-package.cmake  simple-prefix.cmake  simple-rocmversion-env.cmake  simple-soversion-env.cmake  simple-soversion.cmake  simple-test-package.cmake  simple-test.cmake  simple.cmake  toolchain-var.cmake  version-atag-short.cmake  version-atag.cmake  version-build-id.cmake  version-nogit.cmake  version-norepo.cmake  version-parent.cmake  version-patch.cmake  version.cmake  wrapper-nowarn.cmake  wrapper.cmake
test/toolchain-var/: CMakeLists.txt
test/version/: CMakeLists.txt
